fixed overflow of paragraphs, menu coloring

--- a/src/components/MenuNavigation/manu-navigation.scss
+++ b/src/components/MenuNavigation/manu-navigation.scss
@@ -19,23 +19,20 @@
   a:visited,
   a:active {
     &:hover {
-      color: #cdcdcd;
+      color: #b4b4b4;
     }
-
     &.enabledMenuItem {
       color: #ffffff;
     }
-
     font-family: Comfortaa, sans-serif;
     white-space: nowrap;
-    color: #898989;
+    color: #7d7d7d;
     text-decoration: none;
     font-size: 0.95rem;
   }
 
   .link {
     padding: 1vw;
-
   }
 
 }
