--- a/src/templates/site.scss
+++ b/src/templates/site.scss
@@ -39,6 +39,7 @@
     transform: translate(40px, -40px);
     background-color: #0f0f0f;
     padding: 10px;
+    max-width: calc(100% - 40px);
   }
 
   .paragraphNumber {
